--- a/Inventory_service/src/main/resources/application.properties
+++ b/Inventory_service/src/main/resources/application.properties
@@ -1,8 +1,3 @@
 spring.application.name=Inventory-service
 server.port=8082
-spring.datasource.url=jdbc:h2:mem:inventory-db
-
-spring.h2.console.enabled=true
-spring.cloud.discovery.enabled=true
-spring.cloud.config.enabled=false
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.config.import=optional:configserver:http://localhost:9999
